# athena

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
CMakeModules/: CodeCoverage.cmake
backend/: CMakeLists.txt
backend/core/: Graph.h  Tensor.h
docs/0.1/: index.html
docs/0.1/pdf/: refman.idx  refman.tex
docs/0.1/reference/: annotated.html  classes.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_76f1a469f907fcac284f42c683434af6.html  dir_8c739bbef76d64b22d6b0911c526dd76.html  dir_9e72dbc6d78eca36ac1d735adf97d3ed.html  files.html  hierarchy.html  index.html
docs/0.2/pdf/: files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
docs/0.2/reference/: annotated.html  classes.html  dir_0d4065611cca91f4ebf8e14391bc1fea.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_43666603d1081faf6f3fefd9d71221d4.html  dir_76f1a469f907fcac284f42c683434af6.html  dir_8ae8146e22c902dce0a582363bb1af7d.html  dir_8aea0aebba837cf73547cb934c668bb7.html  dir_8c739bbef76d64b22d6b0911c526dd76.html  dir_9e72dbc6d78eca36ac1d735adf97d3ed.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
docs/bytecode/: basics.md
docs/pdf/: annotated.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.toc  styles.tex.sty
docs/reference/: annotated.html  classes.html  dir_0d4065611cca91f4ebf8e14391bc1fea.html  dir_43666603d1081faf6f3fefd9d71221d4.html  dir_8ae8146e22c902dce0a582363bb1af7d.html  dir_8aea0aebba837cf73547cb934c668bb7.html  dir_8c739bbef76d64b22d6b0911c526dd76.html  files.html  functions.html  functions_func.html  hierarchy.html  menudata.js
docs/reference/html/: _abstract_device_8h_source.html  _abstract_executor_8h_source.html  _abstract_initializer_8h_source.html  _abstract_loss_function_8h_source.html  _abstract_memory_manager_8h_source.html  _abstract_optimizer_8h_source.html  _add_op_kernel_8h_source.html  _c_p_u_device_8h_source.html  _data_initializer_8h_source.html  _data_type_8h_source.html  _executor_service_8h_source.html  _generic_executor_8h_source.html  _generic_memory_manager_8h_source.html  _gradient_descent_8h_source.html  _input_node_8h_source.html  _m_s_e_loss_8h_source.html  _mat_mul_op_kernel_8h_source.html  _node_8h_source.html  _op_kernel_8h_source.html  _s_g_d_optimizer_8h_source.html  _scale_op_kernel_8h_source.html  _session_8h_source.html  _sigmoid_op_kernel_8h_source.html  _tensor_8h_source.html  _tensor_shape_8h_source.html  _virtual_memory_8h_source.html  _void_initializer_8h_source.html  add_8h_source.html  annotated.html  backend_2generic_2ops_8h_source.html  classathena_1_1backend_1_1_abstract_device-members.html  classathena_1_1backend_1_1_abstract_device.html  classathena_1_1backend_1_1_abstract_executor-members.html  classathena_1_1backend_1_1_abstract_executor.html  classathena_1_1backend_1_1_abstract_memory_manager-members.html  classathena_1_1backend_1_1_abstract_memory_manager.html  classathena_1_1backend_1_1_virtual_memory-members.html  classathena_1_1backend_1_1_virtual_memory.html  classathena_1_1backend_1_1generic_1_1_c_p_u_device-members.html  classathena_1_1backend_1_1generic_1_1_c_p_u_device.html  (+81 more)
docs/reference/latex/: annotated.tex  classathena_1_1backend_1_1_abstract_device.tex  classathena_1_1backend_1_1_abstract_executor.tex  classathena_1_1backend_1_1_abstract_memory_manager.tex  classathena_1_1backend_1_1_virtual_memory.tex  classathena_1_1backend_1_1generic_1_1_c_p_u_device.tex  classathena_1_1backend_1_1generic_1_1_generic_executor.tex  classathena_1_1backend_1_1generic_1_1_generic_memory_manager.tex  classathena_1_1core_1_1_input_node.tex  classathena_1_1core_1_1_node.tex  classathena_1_1core_1_1_op_kernel.tex  (+29 more)
docsrc/: styles.tex
src/: CMakeLists.txt
src/backend/: AbstractDevice.cpp  AbstractDevice.h  AbstractExecutor.cpp  AbstractExecutor.h  AbstractMemoryManager.cpp  AbstractMemoryManager.h  CMakeLists.txt  ExecutorFactory.cpp  ExecutorService.cpp  ExecutorService.h  Semaphore.cpp  Semaphore.h  VMState.h  VirtualMemory.cpp  VirtualMemory.h  opcode_parser.cpp  opcode_parser.h  opcodes.cpp  opcodes.h
src/backend/generic/: CMakeLists.txt  CPUDevice.cpp  CPUDevice.h  GenericExecutor.cpp  GenericExecutor.h  GenericMemoryManager.cpp  GenericMemoryManager.h  add.cpp  copy.cpp  hadamard.cpp  matmul.cpp  mkscalar.cpp  mse.cpp  mul.cpp  ops.h  scale.cpp  sigmoid.cpp  transpose.cpp
src/core/: AbstractOptimizer.h  CMakeLists.txt  DataType.cpp  DataType.h  Graph.cpp  InputNode.cpp  InputNode.h  Node.cpp  Node.h  OpKernel.cpp  OpKernel.h  Session.cpp  Session.h  Tensor.cpp  Tensor.h  TensorShape.cpp  TensorShape.h  opcodes.h
src/core/initializers/: AbstractInitializer.cpp  AbstractInitializer.h  CMakeLists.txt  DataInitializer.cpp  DataInitializer.h  VoidInitializer.cpp  VoidInitializer.h
src/core/kernels/: AddOpKernel.cpp  AddOpKernel.h  CMakeLists.txt  MatMulOpKernel.cpp  MatMulOpKernel.h  ScaleOpKernel.cpp  ScaleOpKernel.h  SigmoidOpKernel.cpp  SigmoidOpKernel.h
src/core/loss/: AbstractLossFunction.cpp  AbstractLossFunction.h  CMakeLists.txt  MSELoss.cpp  MSELoss.h
src/core/optimizers/: AbstractOptimizer.cpp  AbstractOptimizer.h  CMakeLists.txt  GradientDescent.cpp  GradientDescent.h  SGDOptimizer.cpp  SGDOptimizer.h
src/ops/: CMakeLists.txt  add.cpp  add.h  ops.h  sigmoid.cpp  sigmoid.h
src/optimizers/: CMakeLists.txt  GradientDescent.cpp  GradientDescent.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  vm.cpp
tests/src/: CMakeLists.txt
tests/src/backend/: CMakeLists.txt
tests/src/backend/generic/: CMakeLists.txt  add.cpp
tests/src/core/: CMakeLists.txt  Tensor.cpp
tests/src/core/kernels/: AddOpKernel.cpp
tests/unit/: CMakeLists.txt
tests/unit/backend/generic/: CMakeLists.txt  GenericExecutorTest.h  GenericMemoryManager.cpp  GenericMemoryManagerTest.cpp  add.cpp  copy.cpp  matmul.cpp  mkscalar.cpp  mse.cpp  scale.cpp  transpose.cpp
tests/unit/core/: CMakeLists.txt  Tensor.cpp
tests/unit/core/kernels/: AddOpKernel.cpp
(+464 files in other folders)
